--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Título da página</title>
 </head>
 <body>
-    
+    <img src="/gato.jfif" alt="gato">
 </body>
 </html>
