created folder images and altered path in img tag

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Título da página</title>
 </head>
 <body>
-    <img src="/gato.jfif" alt="gato">
+    <img src="/imagens/gato.jfif" alt="gato">
 </body>
 </html>
